--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -149,11 +149,11 @@ ContentBrowserTab1.CurrentViewType=1
 LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [RootWindow]
-ScreenPosition=X=320.000 Y=154.400
-WindowSize=X=1281.600 Y=721.600
+ScreenPosition=X=320.000 Y=154.000
+WindowSize=X=1281.000 Y=721.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -998,4 +998,30 @@ SceneOutliner.TimeStamp=2021.02.23-04.04.07
 SceneOutliner.LastCompileMethod=Unknown
 HierarchicalLODOutliner.TimeStamp=2021.02.23-04.03.56
 HierarchicalLODOutliner.LastCompileMethod=Unknown
+WorldBrowser.TimeStamp=2021.02.06-13.09.08
+WorldBrowser.LastCompileMethod=Unknown
+
+[LightingBuildOptions]
+OnlyBuildSelected=False
+OnlyBuildSelectedLevels=False
+OnlyBuildVisibility=False
+
+[DetailCategories]
+StaticMeshActor.TransformCommon=True
+StaticMeshActor.StaticMesh=True
+StaticMeshActor.Materials=True
+StaticMeshActor.Physics=True
+StaticMeshActor.Collision=True
+StaticMeshActor.Lighting=True
+StaticMeshActor.Rendering=True
+StaticMeshActor.Navigation=True
+StaticMeshActor.VirtualTexture=True
+StaticMeshActor.Tags=True
+StaticMeshActor.Cooking=True
+StaticMeshActor.Replication=True
+StaticMeshActor.Actor=True
+
+[WorldBrowser]
+DisplayPaths=False
+DisplayActorsCount=False
 
