--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -152,8 +152,8 @@ LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 CleanShutdown=True
 
 [RootWindow]
-ScreenPosition=X=320.000 Y=154.000
-WindowSize=X=1281.000 Y=721.000
+ScreenPosition=X=320.000 Y=153.600
+WindowSize=X=1282.400 Y=722.400
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -170,7 +170,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=D:/JGA2021/test1/Content/
+UNR=../../../../../Users/domao/Documents/GitHub/test3/Content/TopDownBP/Maps
 BRUSH=D:/JGA2021/test1/Content/
 FBX=D:/JGA2021/test1/Content/
 FBXAnim=D:/JGA2021/test1/Content/
@@ -1024,4 +1024,7 @@ StaticMeshActor.Actor=True
 [WorldBrowser]
 DisplayPaths=False
 DisplayActorsCount=False
+
+[MRU]
+MRUItem0=/Game/TopDownBP/Maps/TopDownExampleMap
 
